[gd_scene load_steps=18 format=3 uid="uid://gbc32pmhbacl"]

[ext_resource type="Script" path="res://2dvampire/player.gd" id="1_58bru"]
[ext_resource type="PackedScene" uid="uid://bvme7pl41obee" path="res://2dvampire/slot.tscn" id="2_cg20r"]
[ext_resource type="Texture2D" uid="uid://cfn5te7itfg8m" path="res://2dvampire/purple_gem.png" id="2_gxlkr"]
[ext_resource type="Resource" uid="uid://hrpslgxhewmu" path="res://2dvampire/Resources/Weapons/MagicWand.tres" id="3_c4dj6"]
[ext_resource type="Texture2D" uid="uid://u3p7y6s4i186" path="res://2dvampire/GUI.png" id="3_wmn1o"]
[ext_resource type="Texture2D" uid="uid://b8a5y358xkdp8" path="res://2dvampire/under_xp_bar.png" id="4_b4sea"]
[ext_resource type="Texture2D" uid="uid://cb603gca6e0vp" path="res://2dvampire/under_xp_over.png" id="5_dgcmg"]
[ext_resource type="Texture2D" uid="uid://crscxsdioih5a" path="res://2dvampire/progress_xp_bar.png" id="6_kkj3t"]
[ext_resource type="Script" path="res://2dvampire/options.gd" id="7_gcvfl"]

[sub_resource type="Gradient" id="Gradient_gmdxy"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0.407843)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_r7ehk"]
gradient = SubResource("Gradient_gmdxy")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_i53ex"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(576, 1, 1)
angle_min = -230.8
angle_max = 203.1
gravity = Vector3(0, 98, 0)
scale_min = 0.5
scale_max = 0.5
color_ramp = SubResource("GradientTexture1D_r7ehk")

[sub_resource type="AtlasTexture" id="AtlasTexture_ooo18"]
atlas = ExtResource("3_wmn1o")
region = Rect2(0, 96, 48, 33)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_xncqs"]
size = Vector2(20, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0w02s"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uvvxu"]

[sub_resource type="CircleShape2D" id="CircleShape2D_fkwd6"]
radius = 50.0

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_58bru")

[node name="UI" type="CanvasLayer" parent="."]

[node name="GPUParticles2D" type="GPUParticles2D" parent="UI"]
process_mode = 3
position = Vector2(576, -1)
amount = 200
process_material = SubResource("ParticleProcessMaterial_i53ex")
texture = ExtResource("2_gxlkr")
lifetime = 1.5

[node name="Panel" type="NinePatchRect" parent="UI"]
process_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -163.5
offset_top = -117.5
offset_right = 163.5
offset_bottom = 117.5
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_ooo18")
region_rect = Rect2(0, 0, 48, 33)
patch_margin_left = 7
patch_margin_top = 7
patch_margin_right = 7
patch_margin_bottom = 7

[node name="Label" type="Label" parent="UI/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -33.5
offset_right = 33.5
offset_bottom = 23.0
grow_horizontal = 2
text = "Level Up"

[node name="Weapons" type="HBoxContainer" parent="UI"]
offset_left = 16.0
offset_top = 32.0
offset_right = 144.0
offset_bottom = 72.0

[node name="Slot" parent="UI/Weapons" instance=ExtResource("2_cg20r")]
layout_mode = 2
weapon = ExtResource("3_c4dj6")

[node name="Slot2" parent="UI/Weapons" instance=ExtResource("2_cg20r")]
layout_mode = 2

[node name="Slot3" parent="UI/Weapons" instance=ExtResource("2_cg20r")]
layout_mode = 2

[node name="XP" type="TextureProgressBar" parent="UI"]
unique_name_in_owner = true
custom_minimum_size = Vector2(20, 20)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -320.0
offset_right = 320.0
offset_bottom = 20.0
grow_horizontal = 2
max_value = 10.0
stretch_margin_left = 1
stretch_margin_top = 1
stretch_margin_right = 1
stretch_margin_bottom = 1
texture_under = ExtResource("4_b4sea")
texture_over = ExtResource("5_dgcmg")
texture_progress = ExtResource("6_kkj3t")

[node name="Level" type="Label" parent="UI/XP"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_top = 12.0
offset_bottom = 35.0
grow_horizontal = 0
text = "Lv 1"

[node name="Options" type="VBoxContainer" parent="UI" node_paths=PackedStringArray("weapons", "particles", "panel")]
unique_name_in_owner = true
process_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("7_gcvfl")
weapons = NodePath("../Weapons")
particles = NodePath("../GPUParticles2D")
panel = NodePath("../Panel")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0, 1, 1, 1)
texture = SubResource("PlaceholderTexture2D_xncqs")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_0w02s")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="Collision" type="CollisionShape2D" parent="Area2D"]
unique_name_in_owner = true
shape = SubResource("RectangleShape2D_uvvxu")

[node name="Health" type="ProgressBar" parent="."]
unique_name_in_owner = true
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -14.0
offset_top = -15.0
offset_right = 14.0
offset_bottom = -11.0
grow_horizontal = 2
value = 100.0
show_percentage = false

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)

[node name="Magnet" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="Magnet" type="CollisionShape2D" parent="Magnet"]
unique_name_in_owner = true
shape = SubResource("CircleShape2D_fkwd6")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="Magnet" to="." method="_on_magnet_area_entered"]
